css/style.css
*
{
box-sizing:inherit;
-moz-box-sizing:inherit;
-webkit-box-sizing:inherit;
-webkit-transform: translateZ(0);
-webkit-backface-visibility: hidden;
}

body,html
{
margin:0;
padding:0;
width:100%;
height:100%;
overflow-x:hidden;
overflow-y:hidden;
font-family:sans-serif;
}

a, a:active, a:hover
{
outline:0;
text-decoration:none;
}

a.control
{
font-size:2.4em;
color:#000000;
}

#scenario
{
overflow-x:hidden;
overflow-y:hidden;
width:100%;
height:100%;
background:#333333;
}

#bgCanvas
{
display:block;
}

#snapshot
{
position:absolute;
opacity:0.25;
}

#grid
{
background:#eeeeee;
border:1px solid #cccccc;
margin-top:0px;
margin-left:0px;
-webkit-transition:margin .1s linear, transform .1s linear;
transition:margin .1s linear, transform .1s linear;
font-size:0.5em;
}



#panup
{
position:fixed;
display:block;
background:#000000;
width:4em;
height:2em;
top:48px;
left:50%;
margin-left:-2em;
border-radius:0 0 2em 2em;
z-index:9999;
}

#pandown
{
position:fixed;
display:block;
background:#000000;
width:4em;
height:2em;
bottom:120px;
left:50%;
margin-left:-2em;
border-radius:2em 2em 0 0;
z-index:9999;
}

#panleft
{
position:fixed;
display:block;
background:#000000;
width:2em;
height:4em;
top:40%;
left:0;
border-radius:0 2em 2em 0;
z-index:9999;
}

#panright
{
position:fixed;
display:block;
background:#000000;
width:2em;
height:4em;
top:40%;
left:100%;
margin-left:-2em;
border-radius:2em  0 0 2em;
z-index:9999;
}

.quadro
{
overflow:hidden;
float:left;
}


h4
{
margin:1em 0 0.5em;
}

#controls
{
width:100%;
height:20%;
overflow-x:hidden;
overflow-y:scroll;
}

#modeControlsBox
{
top:0;
left:0;
width:100%;
height:48px;
position:fixed;
z-index:9999;
background:#000000;
overflow:hidden;
}

#modeControls ul
{
/*float:right;*/
list-style-type:none;
margin:0;
padding:0;
overflow:hidden;
}

#modeControls ul li
{
float:left;
margin:0 0.3em;
}

#stateControls
{
float:left;
}

#viewControls
{
float:right;
}

#beingsControls
{
float:right;
}

#modeControls a
{
color:#cccccc;
font-size:2.4em;
display:block;
padding:0 0.2em;
}

#bottomControls
{
position:fixed;
z-index:9999;
height:120px;
width:100%;
bottom:0;
left:0;
background:rgba(0,0,0,1);
color:#dddddd;
}

#actionsControls
{
display:none;
position:fixed;
z-index:9999;
height:120px;
width:100%;
bottom:0;
left:0;
background:rgba(0,0,0,1);
color:#dddddd;
}

#actions a, #itemsControls a
{
display:block;
float:left;
width:48px;
height:48px;
overflow:hidden;
border:3px solid #000000;
border-radius:6px;
text-decoration:none;
margin:3px 6px;
padding:0;
font-size:10px;
text-align:left;
}

#actions a svg, #itemsControls a svg
{
position:relative;
display:block;
overflow:hidden;
margin-left:6px;
}

#actions a span, #itemsControls a span
{
display:block;
margin:0;
padding:0;
line-height:12px;
height:12px;
margin-top:-4px;
text-align:center;
}

#beingsBox, #actionsBox, #tesselsBox, #sizesBox, #timelineBox
{
position:relative;
overflow:visible;
width:100%;
height:60px;
}

#beings, #actions, #tessels, #sizes #timeline
{
position:absolute;
width:auto;
/*min-width:100%;*/
height:60px;
}

#beings > a, #tesselControls a, #itemsSizes a
{
display:inline-block;
width:48px;
height:48px;
overflow:hidden;
border:3px solid #000000;
border-radius:6px;
text-decoration:none;
margin:0 6px;
padding:0;
font-size:10px;
font-weight:bold;
text-align:center;
line-height:48px;
text-transform:uppercase;
}

#showBeing
{
position:absolute;
background:#ffffff;
width:48px;
/*height:96px;*/
/*margin-top:-96px;*/
height:192px;
margin-top:-192px;
border-radius:8px;
font-size:32px;
line-height:48px;
}

#showBeing > a
{

}

.flagHide
{
display:block;
position:absolute;
margin:2px 0 0 2px;
font-size:16px;
}

#bottomControls a, #actionsControls a
{
color:#ffffff;
}

#tessels
{
padding-top:0.2em;
}

#tessels a:first-child
{
color:#333333;
}

#moveControls, #rotateControls, #editControls, #noteControls
{
display:none;
text-align:center;
}

#itemsControlsBox, #dataControls
{
display:none;
overflow:hidden;
}

#dataControls a
{
display:inline-block;
margin:0.2em;
padding:0 0.2em;
}

.mapTile
{
/*outline:1px solid #eeeeee;*/
float:left;
}

.clear
{
overflow:hidden;
clear:both;
}

.mapTile[tessel=acqua]
{
background:#0000ff;
}

.mapTile[tessel=terra]
{
background:#993300;
}

.mapTile[tessel=erba]
{
background:#66ff66;
}

.object
{
position:absolute;
z-index:9;
}

.action
{
position:absolute;
z-index:9;
/*width:36px;*/
/*height:36px;*/
/*margin-top:-12px;*/
/*margin-left:-12px;*/
/*box-shadow:0 0 2px #000000;*/
}

.action svg
{
position:absolute;
}

#noteForm, #noteShow
{
position:absolute;
z-index:999999;
background:#ffffff;
border:1px solid #cccccc;
border-radius:8px;
padding:8px;
box-shadow:0 0 4px #000000;
font-size:11px;
overflow:hidden;
}

#noteShow > div.clearfix
{
min-width:120px;
min-height:60px;
max-width:240px;
}


#saveNote, #closeNote
{
display:block;
float:right;
font-size:36px;
margin:8px 0 0 0;
padding:8px;
background:#000000;
color:#ffffff;
border-radius:8px;
line-height:80%;
}

#saveNote span
{
display:block;
}

.noteLabel
{
position:absolute;
right:-10px;
display:block;
font-size:13px;
}

#patterns
{
position:absolute;
}


#configuration, #newDog
{
display:none;
width:100%;
height:100%;
background:#ffffff;
top:0;
left:0;
/*overflow:x:scroll;*/
/*overflow-y:scroll;*/
overflow:hidden;
z-index:99999;
}

#newDog form
{
padding:1em;
}

.colorSelect
{
display:inline-block;
width:4em;
height:4em;
margin:4px;
}

#submitEditDogForm
{
display:none;
}


#timelineBox
{
display:none;
width:100%;
height:120px;
}

#helpBox
{
display:none;
}


.time
{
border-bottom:2px solid #eeeeee;
border-right:1px solid #cccccc;
float:left;
width:120px;
}

.time > div
{
text-align:center;
max-width:120px;
min-width:120px;
}


.time:first-child
{
border-left:1px solid #ffffff;
}

.time[data-id="0"]
{
display:none!important;
}

.t-id
{
font-weight:bold;
font-size:11px;
line-height:20px;
height:40px;
}

.t-detail
{
font-size:10px;
line-height:19px;
height:38px;
}

#flagDialog
{
position:absolute;
z-index:9999;
background:#ffffff;
height:78px;
}

#flagDialog a
{
color:#000000;
font-weight:bold;
font-size:32px;
line-height:44px;
display:block;
text-align:center;
}

#startHere, #flagStart
{
position:absolute;
width:40px;
font-size:32px;
line-height:44px;
text-align:center;
z-index:9999;
}

#stopHere, #flagStop
{
position:absolute;
margin-left:80px;
width:40px;
font-size:32px;
line-height:44px;
text-align:center;
z-index:9999;
}

#cancelStop
{
margin-top:39px;
}

.makeSnapshot, .clearSnapshot, .showAllTimeline, .hideFromTimeline, .play, .pause, .fwd, .rew, .stepFwd, .stepRew, .gotoStart, .gotoEnd
{
display:inline-block;
font-size:28px;
height:40px;
line-height:40px;
text-align:center;
width:50%;
}

.makeSnapshot
{
background-color:#000000;
-webkit-transition:background-color .5s;
-moz-transition:background-color .5s;
transition:background .5s;
}

.showAllTimeline, .hideFromTimeline
{
display:none;
}

.play, .pause, .stepFwd, .stepRew, .fwd, .rew, .gotoStart, .gotoEnd
{
width:25%;
}

#firstFrameFlag, #lastFrameFlag
{
position:absolute;
color:#000000;
background:#ffffff;
font-size:32px;
line-height:32px;
height:40px;
}

#presentationControls
{
position:absolute;
right:0;
width:160px;
height:120px;
background:#000000;
border-left:1px solid #ffffff;
z-index:9999;
}


[being-hide=true]
{
display:none!important;
}

[frame-hide=true]
{
display:none!important;
}

[time-hide=true]
{
display:none!important;
}

[data-note=true]
{
z-index:999999;
}

